# Qswarm

./: README.md  main.py  render.yaml
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/docs/: UI_API_COMPATIBILITY_REPORT.md  UI_API_CONTRACT.md  UI_V1_API_CLASSIFICATION.md  UI_V1_CONTRACT.md  openapi-ui-v1.json
backend/scripts/: e2e_live_run.py  export_ui_api_fixtures.py  verify_db.py
backend/tests/: conftest.py  test_approvals.py  test_automation_engine_scaffold.py  test_automation_jobs.py  test_automation_round_worker.py  test_automation_sessions.py  test_case_enhancement.py  test_change_planning.py  test_claude_code_adapter.py  test_code_generation.py  test_copilot_agent_adapter.py  test_copilot_agent_argv.py  test_copilot_command_diagnostics.py  test_execution.py  test_failure_analysis.py  test_framework_runtime_service.py  test_framework_scan.py  test_git_author_identity.py  test_health.py  test_jira_client_search_jql.py  test_jira_pickup.py  test_jira_polling.py  test_jira_review_comments.py  test_jira_routes.py  test_patch_base_diff_service.py  test_patch_validation.py  test_pr_creation.py  test_pr_template_render_service.py  test_repair_patch_validation.py  test_repo_bootstrap_service.py  test_repo_context.py  test_repo_workspace_service.py  test_session_approve_state.py  test_session_pr_and_repo_connections.py  test_test_case_registry.py  test_test_design_jira_publish.py  test_test_design_refine_versioning.py  test_ui_api_contract.py  test_ui_v1_api.py  (+12 more)
(+209 files in other folders)
